--- a/core/Pipfile
+++ b/core/Pipfile
@@ -1,18 +1,9 @@
-[[source]]
-
-url = "https://pypi.python.org/simple"
-verify_ssl = true
-
 
 [packages]
 
-dj-database-url = "*"
-django = "*"
-gunicorn = "*"
-"psycopg2" = "*"
-whitenoise = "*"
-requests = "*"
-
+tensorflow = *
+numpy = *
+Flask = *
 
 [requires]
 
